@@ -1279,7 +1279,7 @@ public class TownCommand extends BaseCommand implements CommandExecutor, TabComp
 				if (i < split.length) {
 					comparatorSet = true;
 
-					if (split[i].equalsIgnoreCase("residents")) {
+					if (split[i].equalsIgnoreCase("residents") || split[i].equalsIgnoreCase("resident")) {
 						if (!console && !townyUniverse.getPermissionSource().testPermission(player, PermissionNodes.TOWNY_COMMAND_TOWN_LIST_RESIDENTS.getNode()))
 							throw new TownyException(TownySettings.getLangString("msg_err_command_disable"));
 						comparator = BY_NUM_RESIDENTS;
